tukar nama + added SEO tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/pk.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PisahKata</title>
+    <title>Huruf Arab - Belajar Cara Sambung Huruf Arab</title>
+    <meta
+      name="description"
+      content="Alat bantuan visual untuk memahami cara penyambungan huruf Arab di. Direka untuk guru-guru dan pelajar yang keliru bagaimana rupa huruf jika bersambung."
+    />
+    <meta
+      name="keywords"
+      content="huruf Arab, penyambungan huruf Arab, pengajaran huruf Arab, Belajar Bahasa Arab, Visual huruf Arab, Contoh sambungan Arab"
+    />
   </head>
   <body>
     <div id="root"></div>
